...
        var alertWithAction = newAlert
        alertWithAction.completion = {
            let alert = UIAlertController(
                title: newAlert.title,
                message: newAlert.message,
                preferredStyle: .alert)
            alert.view.accessibilityIdentifier = "Alert"
            let action = UIAlertAction(title: newAlert.buttonText, style: .default) { [weak self] _ in
                guard let self = self else {return}
                self.presenter.restartGame()
            }
            alert.addAction(action)
            self.present(alert, animated: true, completion: nil)
...
